--- a/style.css
+++ b/style.css
@@ -161,20 +161,20 @@ a:hover{
     display: flex;
     align-items: center;
     width: 100%;
-    justify-content: space-evenly;
     margin-top: 8%;
 }
-.humidity-wrap{
+.humidity-wrap,.time-wrap{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 33.3%;
 }
 .humidity-text,.pressure-text{
     font-size: 50px;
     font-family: 'Yanone Kaffeesatz';
 }
-.humidity,.pressure,.time{
+.humidity,.pressure,.time,.time-text{
     font-size: 50px;
     font-family: 'Oswald';
 }
@@ -187,6 +187,7 @@ a:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 33.3%;
 }
 
 
